[gd_scene load_steps=3 format=3 uid="uid://d0qjk4lfqul7v"]

[ext_resource type="Script" path="res://hud.gd" id="1_cjg45"]
[ext_resource type="FontFile" uid="uid://dmyvofcho3hcw" path="res://fonts/Xolonium-Regular.ttf" id="1_shmav"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_cjg45")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 81.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_shmav")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_shmav")
theme_override_font_sizes/font_size = 64
text = "Dodge the Creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.5
offset_top = -140.0
offset_right = 25.5
offset_bottom = -112.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_shmav")
theme_override_font_sizes/font_size = 64
text = "Start"

[connection signal="prep_game" from="." to="." method="_on_prep_game"]
[connection signal="start_game" from="." to="." method="_on_start_game"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
